--- a/spinnaker/build.gradle
+++ b/spinnaker/build.gradle
@@ -1,4 +1,12 @@
+task copyToLib( type: Copy ) {
+    into "$buildDir/libs/lib"
+    from configurations.compile
+}
 
+task copyResources( type: Copy ) {
+    into "$buildDir/libs/conf"
+    from "$buildDir/resources/main"
+}
 
 dependencies {
     compile (
@@ -18,4 +26,24 @@ dependencies {
 
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+jar {
+
+    dependsOn copyToLib
+//    from {
+//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+
+//    }
+
+    def manifestCp = configurations.compile.files.collect {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.spinnaker.stock.StartSkuJob'
+//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
+        attributes 'Class-Path': '. conf ' + manifestCp
+    }
 }
