--- a/ostore/build.gradle
+++ b/ostore/build.gradle
@@ -30,8 +30,7 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib ,   copyResources
-    exclude ("**/*.properties")
+    dependsOn copyToLib
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
@@ -45,7 +44,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.ostore.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. conf ' +  manifestCp
+        attributes 'Class-Path': '.  ' +  manifestCp
     }
 }
 
