--- a/vela-stock/src/main/resources/log4j.properties
+++ b/vela-stock/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #root
-log4j.rootLogger=WARN, spring
+log4j.rootLogger=WARN, file
 log4j.appender.spring=org.apache.log4j.ConsoleAppender
 log4j.appender.spring.layout=org.apache.log4j.PatternLayout
 log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
@@ -8,7 +8,7 @@ log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.rootCategory=ERROR, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
-log4j.appender.file.File=log/vela-logs.log
+log4j.appender.file.File=log/vela-stock-logs.log
 log4j.appender.file.Append=true
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=0
