--- a/acanfora-stock/build.gradle
+++ b/acanfora-stock/build.gradle
@@ -6,7 +6,10 @@ task copyToLib( type: Copy ) {
     from configurations.compile
 }
 
-
+task copyResources( type: Copy ) {
+    into "$buildDir/libs/conf"
+    from "$buildDir/resources/main"
+}
 
 dependencies {
     compile(
@@ -21,7 +24,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
 
     def manifestCp = configurations.compile.files.collect  {
@@ -32,7 +36,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
