--- a/vela-stock/build.gradle
+++ b/vela-stock/build.gradle
@@ -8,6 +8,11 @@ task copyToLib( type: Copy ) {
 }
 
 
+task copyResources( type: Copy ) {
+    into "$buildDir/libs/conf"
+    from "$buildDir/resources/main"
+}
+
 dependencies {
     compile(
             "com.google.code.gson:gson:2.3.1",
@@ -23,8 +28,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-
+    dependsOn copyToLib  , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -34,7 +39,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.vela.stock.VelaStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
