--- a/vela-stock/src/main/resources/sop.properties
+++ b/vela-stock/src/main/resources/sop.properties
@@ -3,9 +3,11 @@
 #服务地址
 HOST=@db.SOP.HOST@
 #supplier key
-APP_KEY=10
+APP_KEY=6621a69608794a2091eea5ca9fb7e9e3
 #supplier secret
-APP_SECRET =5
+APP_SECRET =912d4ef040fb4812b817610c014c99f6
+
+
 
 
 
