--- a/spinnaker-stock/src/main/resources/log4j.properties
+++ b/spinnaker-stock/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #root
-log4j.rootLogger=WARN, spring
+log4j.rootLogger=WARN, file
 log4j.appender.spring=org.apache.log4j.ConsoleAppender
 log4j.appender.spring.layout=org.apache.log4j.PatternLayout
 log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
