--- a/reebonzWiki-order/build.gradle
+++ b/reebonzWiki-order/build.gradle
@@ -16,3 +16,17 @@ dependencies {
 
 
 }
+jar {
+    dependsOn copyToLib, copyResources
+    exclude ("**/*.properties")
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.reebonz.Startup'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    }
+}
