--- a/reebonzWiki/build.gradle
+++ b/reebonzWiki/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 
 
 jar {
-    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    dependsOn copyToLib, copyResources
     exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
@@ -28,7 +28,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.reebonzWiki.StartSkuJob'
+        attributes 'Main-Class': 'com.shangpin.iog.reebonz.StartSkuJob'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
