--- a/bernardellistores/build.gradle
+++ b/bernardellistores/build.gradle
@@ -7,17 +7,12 @@ dependencies {
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-
 }
 
+
 jar {
-
-    dependsOn copyToLib
-//    exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -25,9 +20,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.stefaniamode.Startup'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.bernardellistores.Startup'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
