--- a/reebonzWiki-stock/build.gradle
+++ b/reebonzWiki-stock/build.gradle
@@ -2,12 +2,26 @@ dependencies {
     compile(
             "com.google.code.gson:gson:2.3.1",
                project(':project-common'),
-                  project(':openapi-ice')
+               project(':openapi-ice')
            
     )
-   
+
+}
 
 
+jar {
+
+    dependsOn copyToLib,copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
+    def manifestCp = configurations.compile.files.collect {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.reebonzWiki.stock.StockImp'
+        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+    }
 }
 
 
