--- a/reebonzWiki-stock/build.gradle
+++ b/reebonzWiki-stock/build.gradle
@@ -19,7 +19,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.reebonzWiki.stock.StockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.reebonz.stock.StockImp'
         attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
