--- a/monnierfreres-stock/build.gradle
+++ b/monnierfreres-stock/build.gradle
@@ -8,3 +8,21 @@ dependencies {
 
     )
 }
+
+jar {
+
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
+
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.monnierfreres.stock.StockImp'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    }
+
+}
