--- a/itemInfo-stock/build.gradle
+++ b/itemInfo-stock/build.gradle
@@ -26,7 +26,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.GrabStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.itemInfo.stock.service.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
