--- a/stefaniamode/build.gradle
+++ b/stefaniamode/build.gradle
@@ -11,12 +11,9 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-//    exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
-//    }
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -26,7 +23,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.stefaniamode.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
