--- a/levelgroup/build.gradle
+++ b/levelgroup/build.gradle
@@ -5,6 +5,7 @@ dependencies {
             "org.mybatis:mybatis-spring:1.2.0",
             "mysql:mysql-connector-java:5.1.21",
             "commons-dbcp:commons-dbcp:1.4",
+            "commons-net:commons-net:3.3",
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product')
