--- a/tony/build.gradle
+++ b/tony/build.gradle
@@ -8,3 +8,19 @@ dependencies {
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+
+jar {
+    dependsOn copyToLib, copyResources, copyResourcesToClasses
+    exclude ("**/*.properties")
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.tony.StartSkuJob'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    }
+}
