--- a/tony-stock/build.gradle
+++ b/tony-stock/build.gradle
@@ -13,3 +13,21 @@ dependencies {
             project(':openapi-ice')
     )
 }
+
+
+jar {
+
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.tony.stock.TonyStockImp'
+
+        attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
+    }
+}
