--- a/bagheera-stock/src/main/resources/param.properties
+++ b/bagheera-stock/src/main/resources/param.properties
@@ -1,3 +1,3 @@
 path=/usr/local/appstock/bagheera/BagheeraBoutiqueLaso
-url=http://www.bagheeraboutique.com/it-IT/product/14022
+url=http://www.bagheeraboutique.com/en-US/home/shangpin
 supplierId=2015100701573
