--- a/dellogliostore-stock/build.gradle
+++ b/dellogliostore-stock/build.gradle
@@ -17,7 +17,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.stock.GrabStockImp.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.stock.GrabStockImp'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
