--- a/bagheera-stock/bin/param.properties
+++ b/bagheera-stock/bin/param.properties
@@ -1,3 +1,3 @@
-path=E:/BagheeraBoutiqueLaso
+path=/usr/local/appstock/bagheera/BagheeraBoutiqueLaso
 url=http://www.bagheeraboutique.com/en-US/home/shangpin
-supplierId=201509091712
+supplierId=2015100701573
