--- a/tony-stock/build.gradle
+++ b/tony-stock/build.gradle
@@ -26,7 +26,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.tony.stock.TonyStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.tony.stock.TonyProductStockImp'
 
         attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
     }
