--- a/project-common/build.gradle
+++ b/project-common/build.gradle
@@ -14,4 +14,20 @@ dependencies {
     )
 
 
+
+}
+
+jar {
+    dependsOn copyToLib
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.common.utils.SendMail'
+//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
+        attributes 'Class-Path': '.   ' +  manifestCp
+    }
 }
