--- a/reebonzWiki-order/src/main/resources/conf.properties
+++ b/reebonzWiki-order/src/main/resources/conf.properties
@@ -16,8 +16,9 @@ smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=shangpin001
 to=qiujunwei@shangpin.com
+toReebonz=warehouse.sg@reebonz.com,intshipping@reebonz.com
 subject=reebonz\u8BA2\u5355\u5F02\u5E38
 messageText=
 messageType=text/html;charset=utf-8
 //\u5206\u949F
-time=30
+time=60
