--- a/gilt/src/main/resources/conf.properties
+++ b/gilt/src/main/resources/conf.properties
@@ -3,5 +3,5 @@ supplierId=2015081401432
 key=3d505d9fa5dda757d9145d53a61cbf46
 url=https://api.gilt.com
 saleId=1126643269,1126645281
-
+downloadpic=1
  #fb8ea6839b486dba8c5cabb374c03d9d
