--- a/channeladvisor/build.gradle
+++ b/channeladvisor/build.gradle
@@ -18,12 +18,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -32,7 +28,6 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.channeladvisor.service.Startup'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '.  ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
