--- a/amfeed-stock/build.gradle
+++ b/amfeed-stock/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources, copyResourcesToClasses
     exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
