--- a/itemInfo-purchase/build.gradle
+++ b/itemInfo-purchase/build.gradle
@@ -22,7 +22,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.gilt.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.itemInfo_purchase.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
