--- a/tessabit-stock/src/main/resources/conf.properties
+++ b/tessabit-stock/src/main/resources/conf.properties
@@ -3,7 +3,7 @@ supplierId=2015091701503
 #FTP服务器hostname
 url=partners.tessabit.biz
 #FTP服务器根目录
-remotePath=/
+remotePath=/partner/
 #FTP服务器端口
 port=21
 #用户名
@@ -13,4 +13,4 @@ password=15201108!m
 #服务器端文件名(包括完整路径)
 serverFile=Products.xml
 #本地文件名(包括完整路径)
-localFile=e:/tessabit.xml
+localFile=/usr/local/app/tessabit/tessabit.xml
