--- a/levelgroup/src/main/resources/conf.properties
+++ b/levelgroup/src/main/resources/conf.properties
@@ -2,4 +2,4 @@
 supplierId=2015092901551
 
 path=E:/LevelGroup/shangping.csv
-url=www.biancabianca.com/feed/adforstyle/TLG_AdforStyle_weitzman_NL.csv
+url=http://www.biancabianca.com/feed/adforstyle/TLG_AdforStyle_weitzman_NL.csv
