--- a/levelgroup-stock/build.gradle
+++ b/levelgroup-stock/build.gradle
@@ -4,6 +4,7 @@ dependencies {
             "org.mybatis:mybatis-spring:1.2.0",
             "mysql:mysql-connector-java:5.1.21",
             "commons-dbcp:commons-dbcp:1.4",
+            "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product'),
