--- a/monnierfreres-stock/build.gradle
+++ b/monnierfreres-stock/build.gradle
@@ -4,7 +4,7 @@ dependencies {
             "net.sourceforge.javacsv:javacsv:2.0",
             "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
-            project(':openapi-ice')
+            project(':iog-sop')
 
     )
 }
