--- a/acanfora-stock/build.gradle
+++ b/acanfora-stock/build.gradle
@@ -4,8 +4,8 @@
 dependencies {
     compile(
             project(':project-common'),
-
-            project(':openapi-ice')
+			project(':iog-sop')
+           // project(':openapi-ice')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
