--- a/levelgroup-stock/src/main/resources/conf.properties
+++ b/levelgroup-stock/src/main/resources/conf.properties
@@ -1,2 +1,5 @@
 #
 supplierId=2015092901551
+
+path=/usr/local/app/biancabianca/TLG_partner_weitzman_NL_STOCK.txt
+url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
