--- a/acanfora-stock/src/main/resources/sop.properties
+++ b/acanfora-stock/src/main/resources/sop.properties
@@ -3,9 +3,9 @@
 #服务地址
 HOST=@db.SOP.HOST@
 #supplier key
-APP_KEY=10
+APP_KEY=9c882360ee4a40a69c400af88d2baf9c
 #supplier secret
-APP_SECRET =5
+APP_SECRET =d0425ae9c24b4d7cb7bc65d9365c8962
 
 
 
