--- a/acanfora/build.gradle
+++ b/acanfora/build.gradle
@@ -16,12 +16,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-//    exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -31,7 +27,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.acanfora.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
