--- a/Della/src/main/resources/conf.properties
+++ b/Della/src/main/resources/conf.properties
@@ -1,3 +1,3 @@
 
-supplierId=2015111814071119
-filepath=E:\\lubaijiang\\DellaMartira.CSV
+supplierId=2015112001671
+filepath=E\:\\lubaijiang\\DellaMartira.CSV
