--- a/atelier/src/main/resources/conf.properties
+++ b/atelier/src/main/resources/conf.properties
@@ -6,3 +6,5 @@ items=e:/atelier/items.xml
 availability=e:/atelier/availability.xml
 #本地文件名：所有图片(包括完整路径)
 image=e:/atelier/image.xml
+
+address=http://79.61.138.184/ws_sito/ws_sito_p15.asmx
