--- a/tessabit-stock/src/main/resources/conf.properties
+++ b/tessabit-stock/src/main/resources/conf.properties
@@ -11,6 +11,6 @@ user=defaultmasatoh1
 #密码
 password=15201108!m
 #服务器端文件名(包括完整路径)
-serverFile=Riferimenti.xml
+serverFile=Products.xml
 #本地文件名(包括完整路径)
 localFile=/usr/local/app/tessabit/tessabit.xml
