--- a/vrients-stock/build.gradle
+++ b/vrients-stock/build.gradle
@@ -12,7 +12,6 @@ dependencies {
             "dom4j:dom4j:1.6.1",
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
-            project(':iog-sop'),
             project(':openapi-ice'),
             project(':iog-common-product')
     )
@@ -34,7 +33,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.amfeed.stock.AmfeedStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.amfeed.stock.StartJob'
 
         attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
     }
