--- a/linoricci/src/main/resources/conf.properties
+++ b/linoricci/src/main/resources/conf.properties
@@ -1,20 +1,8 @@
 #供应商ID
-supplierId=2015100301203
-#FTP服务器hostname
-url=www.linoricci.it
-#FTP服务器根目录
-remotePath=/Atelier98/Sito1/File/
-#FTP服务器端口
-port=21
-#用户名
-user=lino75ricci
-#密码
-password=Hlf^g855
-#服务器端文件名(包括完整路径)
-serverItemsFile=Prodotti.xml
-serverStockFile=Disponibilita.xml
-serverImageFile=Riferimenti.xml
-#本地文件名(包括完整路径)
-localItemsFile=E:/linoricci/Prodotti.xml
-localStockFile=E:/linoricci/Disponibilita.xml
-localImageFile=E:/linoricci/Riferimenti.xml
+supplierId=2015091701503
+#本地文件名:所有产品信息(包括完整路径)
+items=e:/atelier/items.xml
+#本地文件名：所有库存(包括完整路径)
+availability=e:/atelier/availability.xml
+#本地文件名：所有图片(包括完整路径)
+image=e:/atelier/image.xml
