--- a/bagheera/src/main/resources/param.properties
+++ b/bagheera/src/main/resources/param.properties
@@ -1,4 +1,4 @@
 path=/usr/local/app/bagheera/BagheeraBoutiqueLaso
-url=http://www.bagheeraboutique.com/en-US/home/shangpin
+url=http://www.bagheeraboutique.com/public/BagheeraBoutiqueShangpin.xls
   #http://www.bagheeraboutique.com/en-US/home/shangpin
 supplierId=2015100701573
