--- a/Antonacci-stock/build.gradle
+++ b/Antonacci-stock/build.gradle
@@ -32,7 +32,7 @@ jar {
     //}.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.rosi.GrapStock'
+        attributes 'Main-Class': 'com.shangpin.iog.antonacci.GrapStock'
         //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
