--- a/KIX/build.gradle
+++ b/KIX/build.gradle
@@ -3,6 +3,8 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
+			"com.google.code.gson:gson:2.3.1",
+    		project(':project-common'),
             project(':iog-common-product'),
     )
 }
