--- a/divo-stock/build.gradle
+++ b/divo-stock/build.gradle
@@ -6,8 +6,9 @@ def propertyPath =    "$buildDir/libs/conf"
 
 dependencies {
     compile(
-      project(':openapi-ice'),
-      project(':iog-common-product'),
+       project(':project-common'),
+
+            project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -16,9 +17,9 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
-//
+
 //    def manifestCp = configurations.compile.files.collect  {
 //
 //        File file = it
@@ -28,7 +29,7 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.DivoStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.OstoreStockImp'
 
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
