--- a/ctsiLogistics/build.gradle
+++ b/ctsiLogistics/build.gradle
@@ -30,7 +30,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.forzieri.StartUp'
+        attributes 'Main-Class': 'com.shangpin.iog.ctsiLogistics.StartSkuJob'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
