--- a/reebonzWiki/src/main/resources/conf.properties
+++ b/reebonzWiki/src/main/resources/conf.properties
@@ -3,6 +3,7 @@ eventUrl=http://api.reebonz.com/gate/api/shangpin/event_list
 productUrl=http://api.reebonz.com/gate/api/shangpin/product_list
 stockUrl=http://api.reebonz.com/gate/api/shangpin/product_qty
 rows=20
+day=90
 #
 #supplierId=2015092800199
 #eventUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/event_list
