--- a/fashionesta-stock/build.gradle
+++ b/fashionesta-stock/build.gradle
@@ -2,13 +2,7 @@
 
 dependencies {
     compile(
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
             "net.sourceforge.javacsv:javacsv:2.0",
-            project(':project-common'),
-            project(':project-dao'),
             project(':iog-common-product'),
             project(':openapi-ice')
     )
@@ -19,20 +13,20 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+ //   def manifestCp = configurations.compile.files.collect  {
+ //       File file = it
+ //       "lib/${file.name}"
+ //   }.join(' ')
 
 
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.fashionesta.stock.StockClientImp'
 
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
