--- a/russoCapri/build.gradle
+++ b/russoCapri/build.gradle
@@ -9,17 +9,17 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+  //  def manifestCp = configurations.compile.files.collect  {
+  //      File file = it
+  //      "lib/${file.name}"
+  //  }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.russoCapri.StartUp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+   //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
