--- a/KIX-stock/build.gradle
+++ b/KIX-stock/build.gradle
@@ -1,32 +1,29 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
 
-sourceCompatibility = 1.5
-version = '1.0'
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
-                   'Implementation-Version': version
-    }
-}
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile(
+    		project(':iog-common-product'),
+        project(':openapi-ice'),
+ 
+    )
 }
 
-test {
-    systemProperties 'property': 'value'
-}
+jar {
 
-uploadArchives {
-    repositories {
-       flatDir {
-           dirs 'repos'
-       }
+    dependsOn copyToLib , copyResources ,dependsClassPath
+    exclude ("**/*.properties")
+   // def manifestCp = configurations.compile.files.collect  {
+   //    File file = it
+   //     "lib/${file.name}" 
+   // }.join(' ')
+
+    manifest {
+	
+   		 attributes 'Main-Class': 'com.shangpin.iog.Creative99.stock.StockImp'
+    
+   
+   
+   //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
