--- a/deliberti/src/main/resources/conf.properties
+++ b/deliberti/src/main/resources/conf.properties
@@ -1,3 +1,8 @@
-supplierId=
-url=
+#supplierId=2016030231546
+supplierId=2016030901801
+#productUrl=http://www.gicos.it/outsrc.php?do=products
+productUrl=http://www.gicos.it/exports_outsrc.csv 
+path=http://www.gicos.it/outsrc.php?do=products
+stockUrl=www.gicos.it/exports_outsrc.csv
+
 day=90
