--- a/deliberti/build.gradle
+++ b/deliberti/build.gradle
@@ -1,13 +1,10 @@
 
-
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
    			"net.sourceforge.javacsv:javacsv:2.0",
            	"com.google.code.gson:gson:2.3.1",
             project(':iog-common-product'),
-        
- 
     )
 }
 
@@ -15,15 +12,14 @@ jar {
 
     dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
-   // def manifestCp = configurations.compile.files.collect  {
-   //    File file = it
-   //     "lib/${file.name}" 
-   // }.join(' ')
+    
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
-   		 attributes 'Main-Class': 'com.shangpin.iog.deliberti.StartUp'
-   
-   
-   //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+   		attributes 'Main-Class': 'com.shangpin.iog.deliberti.StartUp'
+   		attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
