--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -1,3 +1,4 @@
+######################diffproducts  price changed products##############################
 supplierId=
 sendmailSchedule=0 0 12 * * ?
 filepath=/usr/local/tomcat7/webapps/diffproduct.csv
@@ -5,26 +6,26 @@ filepath=/usr/local/tomcat7/webapps/diffproduct.csv
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=shangpin001
-#多个收件人之间用,隔开
-to=
+#
+to=joyce.xia@shangpin.com
 subject=\u4EF7\u683C\u53D1\u751F\u53D8\u5316\u7684\u4EA7\u54C1\u5217\u8868
 messageType=text/html;charset\=utf-8
 
 
 
-#######################发送每天上新产品数量#########################################
+#######################every day new fetched products' quataty#########################################
 dailyUpdateProductSchedule=0 30 8 * * ?
 dailyUpdateProductFilePath=/usr/local/tomcat7/webapps/newproducts.csv
-#收件人列表：多个收件人之间用,隔开
+#
 dailyUpdateProductTo=
 dailyUpdateProductSubject=\u9700\u4E0A\u65B0\u4EA7\u54C1\u6570\u91CF\u7EDF\u8BA1
 day_of_month=10
 
-#####################发送每天拉取的新的产品##########################################
+#####################every day new fetched products##########################################
 supplierfilePath=/usr/local/tomcat7/webapps/supplierids.txt
 splitSign=,
-goodproduct_Schedule=0 0 16 * * ?
+goodproduct_Schedule=0 0 9 * * ?
 goodproduct_FilePath=/usr/local/tomcat7/webapps/newFechproducts.csv
-goodproduct_To=
+goodproduct_To=yudandan@shangpin.com
 goodproduct_Subject=\u4ECA\u65E5\u62C9\u53D6\u7684\u65B0\u54C1
 
