--- a/deliberti-stock/build.gradle
+++ b/deliberti-stock/build.gradle
@@ -3,9 +3,13 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
+    		"org.mybatis:mybatis:3.2.2",
+            "org.mybatis:mybatis-spring:1.2.0",
+            "mysql:mysql-connector-java:5.1.21",
+            "commons-dbcp:commons-dbcp:1.4",
+            "net.sourceforge.javacsv:javacsv:2.0",
     		project(':iog-common-product'),
-        project(':openapi-ice'),
-        
+        	project(':openapi-ice'),
  
     )
 }
@@ -14,17 +18,14 @@ jar {
 
     dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
-   // def manifestCp = configurations.compile.files.collect  {
-   //    File file = it
-   //     "lib/${file.name}" 
-   // }.join(' ')
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}" 
+    }.join(' ')
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.deliberti.stock.StockImp'
-    
-   
-   
-   //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+   		attributes 'Main-Class': 'com.shangpin.iog.deliberti.stock.StockImp'
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
