--- a/bagheera-stock/src/main/resources/param.properties
+++ b/bagheera-stock/src/main/resources/param.properties
@@ -1,3 +1,4 @@
 path=/usr/local/appstock/bagheera/BagheeraBoutiqueLaso
 url=http://www.bagheeraboutique.com/en-US/home/shangpin
 supplierId=2015100701573
+jobsSchedule=0 0 0/1 * * ? 
