--- a/deliberti/build.gradle
+++ b/deliberti/build.gradle
@@ -13,13 +13,13 @@ jar {
     dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
     
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //   File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
    		attributes 'Main-Class': 'com.shangpin.iog.deliberti.StartUp'
-   		attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+   		//attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
