--- a/divo-stock/build.gradle
+++ b/divo-stock/build.gradle
@@ -1,9 +1,4 @@
 
-
-
-
-def propertyPath =    "$buildDir/libs/conf"
-
 dependencies {
     compile(
        project(':project-common'),
@@ -29,7 +24,7 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.OstoreStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.DivoStockImp'
 
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
